@@ -34,6 +34,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       package can create scripts which use the correct version of Python.
     - Resolve Issue #3248 - Removing '-Wl,-Bsymbolic' from SHLIBVERSIONFLAGS
       NOTE: If your build depends on the above you must now add to your SHLIBVERSIONFLAGS
+    - Speedup bin/docs-update-generated by caching parsed docbook schema. (60x speedup)
 
     
   From Jeremy Elson:
